Fix: increased gap between menu items

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -96,7 +96,7 @@ body {
         }
 
         .del-btn {
-          right: 20px;
+          right: 25px;
           color: #c14c4c;
         }
 
@@ -105,7 +105,7 @@ body {
         }
 
         .edit-btn {
-          right: 45px;
+          right: 50px;
           color: #3d78ab;
         }
 
